# WebForumApp

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
WebForumApp/: .env.dist  asgi.py  settings.py  urls.py  wsgi.py
categories/: models.py  urls.py  views.py
categories/migrations/: 0001_initial.py
csv_import/: urls.py  views.py
search/: urls.py  views.py
threads/: models.py  serializers.py  urls.py  views.py
threads/migrations/: 0001_initial.py  0002_alter_thread_author_post.py
users/: serializers.py  urls.py  views.py
